--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.12.RELEASE</version>
+    <version>3.2.6</version>
   </parent>
   <groupId>org.agileguru</groupId>
   <artifactId>baby</artifactId>
@@ -73,6 +73,11 @@
           <artifactId>rest-assured-all</artifactId>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <scope>test</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
@@ -80,14 +85,14 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-               <source>1.8</source>
-               <target>1.8</target>
+               <source>21</source>
+               <target>21</target>
             </configuration>
          </plugin>
          <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.5</version>
+            <version>0.8.11</version>
             <executions>
                <execution>
                   <id>start-agent-UT</id>
